refactoring exception handler

--- a/config/locales/model/errors.en.yml
+++ b/config/locales/model/errors.en.yml
@@ -7,6 +7,7 @@ en:
           format: 'Use letters, numbers, or underscores for your name'
         email:
           blank: 'Enter email'
+          format: 'Invalid email format'
         password:
           blank: 'Enter password'
       user_session:
